# linlvo

./: Cargo.toml  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: BASELINE_MANIFEST.txt  PERF_GUARD_BASELINE.txt  PERF_GUARD_CURRENT.txt  PERF_GUARD_REPORT.txt  baseline.rs  bench_amg.rs  bench_direct.rs  bench_krylov.rs  bench_simd_spmv.rs  bench_spmv.rs
docs/: COMPLETION_SUMMARY.md  DESIGN_DEV.md  EXTERNAL_SOLVER_REQUIREMENTS.md  PHASE3_FINAL_REPORT.md  PROJECT_MILESTONES.md  PURE_RUST_ROADMAP.md  SIMD_IMPLEMENTATION.md  SIMD_SHORT_MID_TERM_SUMMARY.md  TECHNICAL_SPEC.md  direct-solver-comparison.md  eigenvalue-comparison.md
examples/: bench_simd_compare.rs  bench_simd_short_mid.rs  debug_idrs.rs  debug_idrs2.rs  debug_idrs_compare.rs  debug_idrs_f32.rs  debug_idrs_f32b.rs  debug_idrs_n200.rs  debug_idrs_n200b.rs  debug_idrs_s1.rs  debug_idrs_s1_200.rs  debug_idrs_scan.rs  debug_kcycle.rs  debug_tfqmr.rs  ex01_csr_basics.rs  ex02_poisson_1d.rs  ex03_poisson_2d.rs  ex04_nalgebra.rs  ex04_nalgebra_adapt.rs  ex05_faer_adapt.rs  ex05_preconditioned_cg.rs  ex06_richardson.rs  ex07_amg.rs  ex07_ams_ads_tuning.rs  ex08_direct_solvers.rs  ex09_eigen.rs  ex10_matrix_market.rs  ex11_builder.rs  ex12_ams_ads.rs  ex13_ordering_compare.rs  ex14_matrix_free_operator.rs  ex15_builder_report.rs  ex16_ams_ads_builder.rs  ex_mpi_dist_cg.rs  perf_guard.rs  simd_diag.rs
scripts/: check_benchmark_manifest.sh  check_perf_guard.sh  verify_simd.sh  verify_simd_integration.sh
src/: blas_backend.rs  builder.rs  lib.rs  oxiblas_backend.rs  wasm.rs
src/amg/: air.rs  coarsen_agg.rs  coarsen_rs.rs  cycle.rs  interpolation.rs  mod.rs  setup.rs  smoother.rs  strength.rs
src/core/: dense.rs  error.rs  mod.rs  operator.rs  preconditioner.rs  scalar.rs  solver.rs  ssor.rs  vector.rs
src/direct/: blr.rs  cholesky.rs  cholesky_sn.rs  etree.rs  ldlt.rs  lu.rs  lu_sn.rs  mkl.rs  mod.rs  multifrontal.rs  mumps.rs  symbolic.rs  triangular.rs
src/direct/ordering/: colamd.rs  mod.rs  nd.rs  rcm.rs
src/eigen/: ame.rs  arnoldi.rs  generalized.rs  inverse.rs  krylov_schur.rs  lanczos.rs  lobpcg.rs  mod.rs  nep.rs  power.rs  qep.rs  subspace.rs  svd.rs
src/hypre_rs/: mod.rs
src/iterative/: bicgstab.rs  block_gmres.rs  cg.rs  complex_cg.rs  complex_gmres.rs  fgmres.rs  gmres.rs  idrs.rs  lgmres.rs  minres.rs  mod.rs  multi_rhs.rs  pipecg.rs  tfqmr.rs
src/parallel/: mod.rs  rayon_ops.rs
src/parallel_dist/: dist_cg.rs  dist_csr.rs  halo.rs  layout.rs  mod.rs  mpi_halo.rs
src/petsc_rs/: mod.rs
src/precond/: ads.rs  ams.rs  block_jacobi.rs  composite.rs  fieldsplit.rs  icc.rs  ildlt.rs  ilu0.rs  iluk.rs  ilut.rs  jacobi.rs  mod.rs  sor.rs  spai.rs
src/simd/: aarch64.rs  dense_ops.rs  mod.rs  smoother.rs  x86_64.rs
src/sparse/: adapt_faer.rs  adapt_nalgebra.rs  bsr.rs  coo.rs  csc.rs  csr.rs  dia.rs  ell.rs  mmio.rs  mod.rs  nalgebra.rs  ops.rs
tests/: test_amg.rs  test_amg_diag_h2.rs  test_amg_internals.rs  test_amg_kcycle_a3.rs  test_amg_rate_h3.rs  test_ams_ads.rs  test_block_jacobi_a4.rs  test_builder_c2.rs  test_builder_mmio_integration.rs  test_cholesky_sn_f3.rs  test_complex_krylov.rs  test_direct.rs  test_direct_s14_s15.rs  test_dist_parallel.rs  test_eigen.rs  test_eigen_s11_s12.rs  test_eigen_s8_s10.rs  test_fieldsplit.rs  test_fixed_iters.rs  test_idrs_f4.rs  test_ildlt_f2.rs  test_krylov.rs  test_ldlt_e1.rs  test_mmio.rs  test_multifrontal_d1.rs  test_ordering_nd.rs  test_parallel.rs  test_pipecg.rs  test_precond.rs  test_proptest.rs  test_refinement.rs  test_reuse_symbolic.rs  test_sparse_formats_h1.rs  test_sparse_ops.rs  test_sparse_proptest_e4.rs  test_sprint3.rs  test_supernodal_f1.rs  test_symbolic_cholesky.rs  test_tfqmr_a1.rs  test_wasm.rs
tests/common/: mod.rs
