[package]
name = "linger"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Pure-Rust sparse linear system solver library for FEA"
license = "MIT OR Apache-2.0"

[features]
default = ["rayon"]
rayon   = ["dep:rayon"]
mpi     = []                         # placeholder: dep:rsmpi
hypre-rs = []                        # pure-Rust HYPRE-equivalent capability track
hypre-ffi = []                       # placeholder: C-lib binding
petsc-ffi = []                       # placeholder: C-lib binding
mumps   = []                         # placeholder: dep:mumps-sys
mkl     = []                         # placeholder: dep:intel-mkl-src
wasm    = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
__native = []                        # internal: gates native-only examples (nalgebra etc.)

[dependencies]
num-traits  = "0.2"
num-complex = "0.4"
thiserror   = "2"
rayon       = { version = "1.10", optional = true }

# WASM optional deps
wasm-bindgen            = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Native-only nalgebra integration.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nalgebra        = { version = "0.33", features = [] }
nalgebra-sparse = "0.4"

[dev-dependencies]
approx   = "0.5"
proptest = "1.5"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "bench_spmv"
harness = false

[[bench]]
name    = "bench_krylov"
harness = false

[[bench]]
name    = "bench_amg"
harness = false

[[bench]]
name    = "bench_direct"
harness = false

[[example]]
name = "ex04_nalgebra"
required-features = ["__native"]
